# mifi

./: .gitignore  CONTEXT.md  Cargo.toml  SPEC.md
.scratch/mifi-spec/: map.md
.scratch/mifi-spec/assets/: 02-fints-library-landscape.md  03-finanzguru-export.md  04-flow-viz-prototype.html  05-aggregator-selection.md  08-depot-networth-data.md  11-recurring-detection.md  12-security-model.md  17-csv-import-pipeline.md  18-ui-ia-prototype.html
.scratch/mifi-spec/issues/: 01-account-inventory.md  02-fints-library-landscape.md  03-finanzguru-export-salvage.md  04-flow-viz-prototype.md  05-aggregator-selection.md  06-backend-stack.md  07-categorization-approach.md  08-depot-networth-data.md  09-domain-model.md  10-budgeting-model.md  11-recurring-detection.md  12-security-model.md  13-spec-assembly.md  14-fints-product-id-registration.md  15-scalable-cli-beta.md  (+5 more)
core/: Cargo.toml
core/migrations/: 0001_init.sql  0002_seed_accounts.sql  0003_transaction_external_ref_unique.sql
core/src/: db.rs  import_hash.rs  lib.rs  migrations.rs  normalize.rs
core/src/domain/: budget.rs  categorize.rs  contract.rs  mod.rs  networth.rs  overview.rs  transfer.rs
core/src/import/: mod.rs  paypal.rs  scalable.rs
core/src/seed/: finanzguru.rs  mod.rs
frontend/: .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: entry.ts  main.ts  scene.test.ts  story.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
