[package]
name = "core"
version = "0.1.0"
edition.workspace = true

[lib]
name = "mifi_core"
path = "src/lib.rs"

[dependencies]
calamine = { version = "0.36.0", features = ["chrono", "dates"] }
chrono = "0.4.45"
csv = "1.4.0"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
rust_decimal = "1.42.1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
